.archive/netbox/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
spec:
  hostnames: ["netbox.vzkn.eu"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: netbox
          namespace: network
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
